fix: overflow

--- a/get-started.css
+++ b/get-started.css
@@ -293,6 +293,6 @@ body {
 
   .component-code-container {
     max-width: 300px;
-    overflow: scroll;
+    overflow-x: scroll;
   }
 }
